--- a/about.html
+++ b/about.html
@@ -1,101 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/owl.carousel.css">
-     <link rel="stylesheet" href="css/owl.theme.default.css">
-     <link rel="stylesheet" href="css/main.css" />
-    <title>UG Financial - About</title>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+         />
+      <link
+         rel="stylesheet"
+         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+         crossorigin="anonymous"
+         />
+      <link rel="stylesheet" href="css/owl.carousel.css">
+      <link rel="stylesheet" href="css/owl.theme.default.css">
+      <link rel="stylesheet" href="css/main.css" />
+      <title>UG Financial - About</title>
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-xl navbar-light">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="img/logo.png" alt="" />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarText"
-          aria-controls="navbarText"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                The Company
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item selected" href="about.html">About Us  <span class="sr-only">(current)</span></a>
-                <a class="dropdown-item" href="team.html">Our Team</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="case-studies.html">Case Studies</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <button class="btn secondary-btn ml-3">Request a callback</button>
-          </ul>
-        </div>
+   </head>
+   <body>
+      <div class="loader">
+         <div class="inner"></div>
       </div>
-    </nav>
-
-    <section id="showcase" class="about-showcase">
-      <div class="container">
-          <div class="showcase-content">
-            <h1>
-              We help you <br />
-              <span class="text-primary">Build</span> the Future
-            </h1>
-            <p class="lead">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus
-              inventore, dolores provident accusantium est voluptatem.
-            </p>
-            <button class="btn primary-btn btn-lg">Request a callback</button>
-          </div>
-          
-        </div>
-      </div>
-    </section>
-
-     <section id="about-a" data-aos="fade-right">
+      <nav class="navbar navbar-expand-xl navbar-light">
+         <div class="container">
+            <a class="navbar-brand" href="#">
+            <img src="img/logo.png" alt="" />
+            </a>
+            <button
+               class="navbar-toggler"
+               type="button"
+               data-toggle="collapse"
+               data-target="#navbarText"
+               aria-controls="navbarText"
+               aria-expanded="false"
+               aria-label="Toggle navigation"
+               >
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+               <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                     <a class="nav-link" href="index.html"
+                        >Home</a
+                        >
+                  </li>
+                  <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     The Company
+                     </a>
+                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item selected" href="about.html">About Us  <span class="sr-only">(current)</span></a>
+                        <a class="dropdown-item" href="team.html">Our Team</a>
+                     </div>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="services.html">Services</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="case-studies.html">Case Studies</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="blog.html">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+                  <button class="btn secondary-btn ml-3">Request a callback</button>
+               </ul>
+            </div>
+         </div>
+      </nav>
+      <section id="showcase" class="about-showcase">
+         <div class="container">
+            <div class="showcase-content">
+               <h1>
+                  We help you <br />
+                  <span class="text-primary">Build</span> the Future
+               </h1>
+               <p class="lead">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus
+                  inventore, dolores provident accusantium est voluptatem.
+               </p>
+               <button class="btn primary-btn btn-lg">Request a callback</button>
+            </div>
+         </div>
+         </div>
+      </section>
+      <section id="about-a" data-aos="fade-right">
          <div class="container">
             <span class="header-small">About Us</span>
             <div class="line"></div>
             <h2>
-              <span class="text-primary">Empower</span> Your Financial Life 
+               <span class="text-primary">Empower</span> Your Financial Life 
             </h2>
             <div class="row">
                <div class="col-md-4">
@@ -127,7 +126,7 @@
                <div class="col-md-4">
                   <div class="card">
                      <div class="card-body">
-                         <img src="img/howwedo.png" alt="">
+                        <img src="img/howwedo.png" alt="">
                         <h3><span class="primary-text"> How </span> Do We Do it</h3>
                         <p>
                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -140,119 +139,109 @@
             </div>
          </div>
       </section>
-
-          <section id="about-b" data-aos="fade-right">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-6" id="about-img"></div>
-          <div class="col-lg-4 col-md-6" id="about-content">
-            <span class="header-small text-left">How we help?</span>
-            <div class="line ml-0"></div>
-            <h2>
-              Providing You with <span class="text-primary">frictionless</span> experience 
-            </h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate officiis voluptas excepturi sunt a repudiandae ipsum repellendus autem suscipit adipisci, quo sapiente aperiam dolorum saepe assumenda provident ad! In.
-            </p>
-            <a class="btn secondary-btn" href="services.html">
-              Learn More
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-   
-
-   <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-              <a href="#" class="logo">
-                <img src="img/logo.png" alt="" />
-              </a>
-              <p class="mt-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, architecto
-              </p>
-              <p>
-               <small>
-                  &copy; Copyright 2021. All rights reserved by UGFinancial
-               </small>
-              </p>
-          </div>
-          <div class="col-lg-3 col-md-6 links">
-            <h3 class="mt-4">About us</h3>
-            <a href="#about">About Us</a><br>
-            <a href="case-studies.html">Case studies</a><br>
-            <a href="services.html">Services</a><br>
-            <a href="blog.html">Blog</a><br>
-            <a href="contact.html">Contact</a><br>
-          </div>
-
-          <div class="col-lg-3 col-md-6 links">
-            <h3 class="mt-4">Services</h3>
-            <a href="#">Investment Planning</a><br>
-            <a href="#">Insurance Planning</a><br>
-            <a href="#">Risk Management</a><br>
-            <a href="#">Saving Plan</a><br>
-            <a href="#">Mutual Fund</a><br>
-          </div>
-
-           <div class="col-lg-3 col-md-6 links">
-            <h3 class="mt-4">Our address</h3>
-            <p class="mt-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, architecto
-            </p> 
-            
-            <p class="primary-text">
-               support@UGFinancial.com
-            </p>
-            <div class="social">
-              <a href="">
-                <i class="fab fa-facebook"></i>
-              </a>
-              <a href="">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a href="">
-                <i class="fab fa-instagram"></i>
-              </a>
+      <section id="about-b" data-aos="fade-right">
+         <div class="container">
+            <div class="row">
+               <div class="col-lg-8 col-md-6" id="about-img"></div>
+               <div class="col-lg-4 col-md-6" id="about-content">
+                  <span class="header-small text-left">How we help?</span>
+                  <div class="line ml-0"></div>
+                  <h2>
+                     Providing You with <span class="text-primary">frictionless</span> experience 
+                  </h2>
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate officiis voluptas excepturi sunt a repudiandae ipsum repellendus autem suscipit adipisci, quo sapiente aperiam dolorum saepe assumenda provident ad! In.
+                  </p>
+                  <a class="btn secondary-btn" href="services.html">
+                  Learn More
+                  </a>
+               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </footer> 
-
-
-
-
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/countUp.js"></script>
-    <script src="js/countUp-jquery.js"></script>
-    <script src="js/owl.carousel.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      offset: 200,
-      duration: 1000
-    });
-  </script>
-
-
-    </script>
-  </body>
+         </div>
+      </section>
+      <footer>
+         <div class="container">
+            <div class="row">
+               <div class="col-lg-3 col-md-6">
+                  <a href="#" class="logo">
+                  <img src="img/logo.png" alt="" />
+                  </a>
+                  <p class="mt-3">
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, architecto
+                  </p>
+                  <p>
+                     <small>
+                     &copy; Copyright 2021. All rights reserved by UGFinancial
+                     </small>
+                  </p>
+               </div>
+               <div class="col-lg-3 col-md-6 links">
+                  <h3 class="mt-4">About us</h3>
+                  <a href="#about">About Us</a><br>
+                  <a href="case-studies.html">Case studies</a><br>
+                  <a href="services.html">Services</a><br>
+                  <a href="blog.html">Blog</a><br>
+                  <a href="contact.html">Contact</a><br>
+               </div>
+               <div class="col-lg-3 col-md-6 links">
+                  <h3 class="mt-4">Services</h3>
+                  <a href="#">Investment Planning</a><br>
+                  <a href="#">Insurance Planning</a><br>
+                  <a href="#">Risk Management</a><br>
+                  <a href="#">Saving Plan</a><br>
+                  <a href="#">Mutual Fund</a><br>
+               </div>
+               <div class="col-lg-3 col-md-6 links">
+                  <h3 class="mt-4">Our address</h3>
+                  <p class="mt-3">
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, architecto
+                  </p>
+                  <p class="primary-text">
+                     support@UGFinancial.com
+                  </p>
+                  <div class="social">
+                     <a href="">
+                     <i class="fab fa-facebook"></i>
+                     </a>
+                     <a href="">
+                     <i class="fab fa-twitter"></i>
+                     </a>
+                     <a href="">
+                     <i class="fab fa-instagram"></i>
+                     </a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </footer>
+      <script
+         src="https://code.jquery.com/jquery-3.5.1.min.js"
+         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+         crossorigin="anonymous"></script>
+      <script
+         src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+         crossorigin="anonymous"
+         ></script>
+      <script
+         src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+         crossorigin="anonymous"
+         ></script>
+      <script src="js/countUp.js"></script>
+      <script src="js/countUp-jquery.js"></script>
+      <script src="js/owl.carousel.js"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+         AOS.init({
+           offset: 200,
+           duration: 1000
+         });
+      </script>
+      <script>
+         $(document).ready(function(){
+            $( ".loader").fadeOut(700);
+         });
+      </script>
+   </body>
 </html>
