--- a/blog-post.html
+++ b/blog-post.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
+    <div class="loader">
+      <div class="inner"></div>
+    </div>
     <nav class="navbar navbar-expand-xl navbar-light case-nav">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -174,8 +177,8 @@
     </footer>
 
     <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
     <script
@@ -193,6 +196,9 @@
       AOS.init({
         offset: 200,
         duration: 1000,
+      });
+      $(document).ready(function () {
+        $(".loader").fadeOut(700);
       });
     </script>
   </body>
