--- a/case.html
+++ b/case.html
@@ -23,6 +23,9 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
+    <div class="loader">
+      <div class="inner"></div>
+    </div>
     <nav class="navbar navbar-expand-xl navbar-light case-nav">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -266,8 +269,8 @@
       </div>
     </footer>
     <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
     <script
@@ -294,6 +297,7 @@
 
     <script>
       $(document).ready(function () {
+        $(".loader").fadeOut(700);
         var stats = $("#case-study-a").offset().top;
         var countUpFinished = false;
 
