--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
+     <div class="loader">
+        <div class="inner"></div>
+    </div>
     <nav class="navbar navbar-expand-xl navbar-light">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -198,11 +201,10 @@
     </footer> 
 
 
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
+     <script
+         src="https://code.jquery.com/jquery-3.5.1.min.js"
+         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+         crossorigin="anonymous"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -218,6 +220,10 @@
       AOS.init({
         offset: 200,
         duration: 1000
+      });
+
+      $(document).ready(function(){
+          $( ".loader").fadeOut(700);
       });
     </script>
   </body>
