--- a/about.html
+++ b/about.html
@@ -14,9 +14,16 @@
          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
          crossorigin="anonymous"
          />
-      <link rel="stylesheet" href="css/owl.carousel.css">
-      <link rel="stylesheet" href="css/owl.theme.default.css">
-      <link rel="stylesheet" href="css/main.css" />
+         <link rel="stylesheet" href="css/owl.carousel.css">
+         <link rel="stylesheet" href="css/owl.theme.default.css">
+         <link rel="stylesheet" href="css/main.css" />
+       <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+      <link rel="manifest" href="/favicons/site.webmanifest">
+      <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+      <meta name="msapplication-TileColor" content="#da532c">
+      <meta name="theme-color" content="#ffffff">
       <title>UG Financial - About</title>
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
        <script
